# game-programming-25

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/kenney/: _tilesheets.txt
data/opengameart.org/: credits.txt
examples/: 00_hello_world.c  01_hello_world.cpp  02_hello_sdl.cpp  CMakeLists.txt
exercises/: CMakeLists.txt  E00_introduction.cpp  E00_introduction.md  E01_rendering.cpp  E02_collisions.cpp  E02_collisions.md  E03_coordinate_systems.cpp  E03_coordinate_systems.md  E04_physics.cpp  E04_physics.md  E05_animation_and_audio.cpp  E05_animation_and_audio.md  E06_ui.cpp  E06_ui.md  L01_rendering.md
exercises_solutions/: CMakeLists.txt  ES00_introduction.cpp  ES01_rendering.cpp  ES02_collisions.cpp  ES03_coordinate_systems.cpp  ES04.1.1_shooting_game.cpp  ES04.1.2_pool_game.cpp  ES04.1.3_platformer_game.cpp  ES04.2_physics_step.cpp  ES05_animation_and_audio.cpp  ES05_entity_implementations.inl  ES05_sys_animation.hpp  ES05_sys_audio.hpp  ES06_ui.cpp
lib/box2d/: CMakeLists.txt  README.txt
lib/imgui/: CMakeLists.txt
lib/itu/: itu_common.hpp  itu_default_systems.cpp  itu_entity_storage.cpp  itu_entity_storage.hpp  itu_lib_box2d.hpp  itu_lib_debug_ui.hpp  itu_lib_engine.hpp  itu_lib_fileutils.hpp  itu_lib_imgui.hpp  itu_lib_overlaps.hpp  itu_lib_render.hpp  itu_lib_sprite.hpp  itu_resource_storage.cpp  itu_resource_storage.hpp  itu_sys_physics.hpp  itu_sys_sprite_renderer.hpp  itu_sys_transform.cpp  itu_sys_transform.hpp  itu_unity_include.hpp
live_coding/: CMakeLists.txt  E01_rendering_livecoding_start.cpp  LC00_intro.cpp  LC01_rendering_livecoding_start.cpp  LC02_collisions_livecoding_start.cpp  LC03_coordinate_systems_livecoding_start.cpp
playground/: CMakeLists.txt  somecpp.cpp  somemore.cpp
